Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,8 +48,16 @@
 <h2>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me</h2>
 
+<ul>
+<li>Im a sophomore at Mansfield university.</li>
+</ul>
+
 <h2>
 <a id="contact-information" class="anchor" href="#contact-information" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Information</h2>
+
+<ul>
+<li><a href="mailto:mitchelltc07@mounties.mansfield.edu">mitchelltc07@mounties.mansfield.edu</a></li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/TMitch15/portfolio">Portfolio</a> is maintained by <a href="https://github.com/TMitch15">TMitch15</a>.</span>
